provider State management, bottomnavbar added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_svg:
   flutter_screenutil:
   intl:
+  persistent_bottom_nav_bar_v2: 
+  provider:
+
 
 dev_dependencies:
   flutter_test:
